// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delay autorun until end of transaction 1`] = `
Array [
  Object {
    "key": "a",
    "name": "ObservableObject@1",
    "newValue": 3,
    "observableKind": "object",
    "oldValue": 2,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  Object {
    "key": "a",
    "name": "ObservableObject@1",
    "newValue": 4,
    "observableKind": "object",
    "oldValue": 3,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "end1",
  Object {
    "key": "a",
    "name": "ObservableObject@1",
    "newValue": 5,
    "observableKind": "object",
    "oldValue": 4,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "end2",
  Object {
    "name": "test",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  Object {
    "name": "ObservableObject@1.b",
    "type": "compute",
  },
  "calc y",
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "post trans1",
  Object {
    "key": "a",
    "name": "ObservableObject@1",
    "newValue": 6,
    "observableKind": "object",
    "oldValue": 5,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "name": "ObservableObject@1.b",
    "type": "compute",
  },
  "calc y",
  Object {
    "name": "test",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "post trans2",
  Object {
    "key": "a",
    "name": "ObservableObject@1",
    "newValue": 3,
    "observableKind": "object",
    "oldValue": 6,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "post trans3",
]
`;

exports[`issue 50 1`] = `
Array [
  "auto",
  "calc c",
  "transstart",
  Object {
    "key": "a",
    "name": "ObservableObject@1",
    "newValue": false,
    "observableKind": "object",
    "oldValue": true,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  Object {
    "key": "b",
    "name": "ObservableObject@1",
    "newValue": true,
    "observableKind": "object",
    "oldValue": false,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpreend",
  Object {
    "name": "ar",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  Object {
    "name": "ObservableObject@1.c",
    "type": "compute",
  },
  "calc c",
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpostend",
]
`;

exports[`verify transaction events 1`] = `
Array [
  "auto",
  "calc c",
  "transstart",
  Object {
    "key": "b",
    "name": "ObservableObject@1",
    "newValue": 2,
    "observableKind": "object",
    "oldValue": 1,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpreend",
  Object {
    "name": "ObservableObject@1.c",
    "type": "compute",
  },
  "calc c",
  Object {
    "name": "ar",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpostend",
]
`;
